--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "pg": "^8.7.1",
     "axios": "^0.24.0",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "node-fetch": "^3.3.2",
+    "pg": "^8.7.1"
   }
 }
